<resources>
    <string name="app_name">AirWindow</string>

    <string name="home_edit_title">Edit Home</string>
    <string name="room_edit_title">Edit Room</string>
    <string name="window_edit_title">Edit Window</string>
    <string name="edit_message">Please input your new values</string>

    <string name="dialog_accept">Accept</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="room_add_title">Add Room</string>
    <string name="room_add_message">Please input room information</string>
    <string name="room_add_name_tv">Room Name</string>
    <string name="room_add_description_tv">Room Description</string>

    <string name="room_delete_title">Delete Room</string>
    <string name="room_delete_message">Please confirm room deletion</string>

    <string name="window_add_title">Add Window</string>
    <string name="window_add_message">Please input window information</string>
    <string name="window_add_name_tv">Window Name</string>
    <string name="window_add_description_tv">Window Description</string>

    <string name="window_delete_title">Delete Window</string>
    <string name="window_delete_message">Please confirm window deletion</string>

    <string name="home_title">Home Overview</string>
    <string name="home_add_room_button">Add Room</string>
    <string name="home_edit_button">Edit Home</string>

    <string name="room_title">Room Overview</string>
    <string name="room_add_window_button">Add Window</string>
    <string name="room_edit_button">Edit Room</string>
    <string name="room_delete_button">Delete Room</string>

    <string name="window_title">Window Settings</string>
    <string name="window_current_state_text">Current State: </string>
    <string name="window_open_text">Open or Close</string>
    <string name="window_state_open">Open</string>
    <string name="window_state_closed">Closed</string>
    <string name="window_scheduled_task_text">Open or Close daily at given time</string>
    <string name="window_onetime_task_text">Open or Close in given minutes</string>
    <string name="window_time_button">Time</string>
    <string name="window_minute_hint">Minutes</string>
    <string name="window_open_action_togglebutton_on">Open</string>
    <string name="window_open_action_togglebutton_off">Close</string>
    <string name="window_task_button">Create Task</string>
    <string name="window_weatheraware_text">Automatically Close</string>
    <string name="window_weatheraware_togglebutton_on">On</string>
    <string name="window_weatheraware_togglebutton_off">Off</string>
    <string name="window_edit_button">Edit</string>
    <string name="window_delete_button">Delete</string>
    <string name="window_desired_state_text">Desired State:</string>
    <string name="window_toast_edit_text">Successfully edited window</string>
    <string name="window_toast_scheduledtask_text">Successfully scheduled daily task</string>
    <string name="window_toast_onetimetask_text">Successfully scheduled one time task</string>
    <string name="room_toast_edit_text">Successfully edited room</string>
    <string name="home_toast_edit_text">Successfully edited home</string>
    <string name="window_toast_statechange_text">Successfully changed desired state</string>
    <string name="home_schedule_button">Schedules</string>
    <string name="schedule_title">Schedules</string>
    <string name="schedule_description">Define schedules for more than one window.</string>


</resources>