<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".activities.ScheduleActivity">

    <TextView
        android:id="@+id/tvScheduleDaily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/window_scheduled_task_text"
        app:layout_constraintStart_toStartOf="@+id/rvWindowMultiSelect"
        app:layout_constraintTop_toBottomOf="@+id/rvWindowMultiSelect" />

    <Button
        android:id="@+id/btScheduleDailyTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="populateTimePicker"
        android:text="@string/window_time_button"
        app:layout_constraintStart_toStartOf="@+id/tvScheduleDaily"
        app:layout_constraintTop_toBottomOf="@+id/tvScheduleDaily" />

    <ToggleButton
        android:id="@+id/tbScheduleDailyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="ToggleButton"
        android:textOff="@string/window_open_action_togglebutton_on"
        android:textOn="@string/window_open_action_togglebutton_off"
        app:layout_constraintEnd_toEndOf="@+id/rvWindowMultiSelect"
        app:layout_constraintTop_toBottomOf="@+id/tvScheduleDaily" />

    <Button
        android:id="@+id/btScheduleDailyOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="postScheduledTask"
        android:text="@string/window_task_button"
        app:layout_constraintEnd_toEndOf="@+id/tbScheduleDailyState"
        app:layout_constraintTop_toBottomOf="@+id/tbScheduleDailyState" />

    <TextView
        android:id="@+id/tvScheduleLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/window_onetime_task_text"
        app:layout_constraintStart_toStartOf="@+id/btScheduleDailyTimePicker"
        app:layout_constraintTop_toBottomOf="@+id/btScheduleDailyTimePicker" />

    <Button
        android:id="@+id/btScheduleLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="postOneTimeTask"
        android:text="@string/window_task_button"
        app:layout_constraintEnd_toEndOf="@+id/tbScheduleLaterState"
        app:layout_constraintTop_toBottomOf="@+id/tbScheduleLaterState" />

    <ToggleButton
        android:id="@+id/tbScheduleLaterState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="ToggleButton"
        android:textOff="@string/window_open_action_togglebutton_on"
        android:textOn="@string/window_open_action_togglebutton_off"
        app:layout_constraintEnd_toEndOf="@+id/btScheduleDailyOK"
        app:layout_constraintTop_toBottomOf="@+id/tvScheduleLater" />

    <EditText
        android:id="@+id/etnScheduleLater"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/window_minute_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/tvScheduleLater"
        app:layout_constraintTop_toBottomOf="@+id/tvScheduleLater"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/ivScheduleIcon"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clock" />

    <TextView
        android:id="@+id/tvScheduleName"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/schedule_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivScheduleIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScheduleDescription"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/schedule_description"
        app:layout_constraintStart_toStartOf="@+id/tvScheduleName"
        app:layout_constraintTop_toBottomOf="@+id/tvScheduleName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWindowMultiSelect"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivScheduleIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>