<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".activities.RoomActivity">

    <ImageView
        android:id="@+id/ivRoomIcon"
        android:layout_width="140dp"
        android:layout_height="130dp"
        android:src="@drawable/room_bed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRoomName"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="Name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivRoomIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRoomDescription"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Description"
        app:layout_constraintStart_toStartOf="@+id/tvRoomName"
        app:layout_constraintTop_toBottomOf="@+id/tvRoomName" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRoomWindowList"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRoomIcon" />

    <Button
        android:id="@+id/btRoomAddWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="addWindowDialog"
        android:text="@string/room_add_window_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvRoomWindowList" />

    <Button
        android:id="@+id/btRoomEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="editRoomDialog"
        android:text="@string/room_edit_button"
        app:layout_constraintEnd_toEndOf="@+id/btRoomAddWindow"
        app:layout_constraintTop_toBottomOf="@+id/btRoomAddWindow" />

    <Button
        android:id="@+id/btRoomDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="deleteRoomDialog"
        android:text="@string/room_delete_button"
        app:layout_constraintEnd_toEndOf="@+id/btRoomEdit"
        app:layout_constraintTop_toBottomOf="@+id/btRoomEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>